# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

  15 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    Add bzr port 4155 to /etc/services, #188970 thanks to Andrew Cowie.

  08 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    Add help to rc-update #188170.
    If given a pidfile, just match on that for seeing if we have crashed
    or not, #186159.

* baselayout-2.0.0_rc2 (04 Aug 2007)

  04 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    Boot properly when we cannot set an early font, #187628.
    rc-update works again, #187487.

  03 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    Fix adding multiple IP addresses, #187526.
    Fix static IPv6 routes, #187514.

* baselayout-2.0.0_rc1 (02 Aug 2007)

  01 Aug 2007; Mike Frysinger <vapier@gentoo.org>:

    Punt /dev/shm from default /etc/fstab as we handle it and add a helpful
    hint about the RC_USE_FSTAB option.

  31 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    All our binaries are now multicalls into rc, which makes our on disk size
    a lot smaller.

  23 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    appending noinitd=xdm will skip the xdm service when first booting, #181858.

  22 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    Harden gendepends.sh some more so we only capture the stdout we want from
    the depend function, #186072.

  21 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    RC_DEPEND_STRICT now controls dependency strictness.
    If yes then we only use services in the boot and default runlevels,
    regradless of service state.
    If no then we take into account coldplugged services and the state
    of currently running services.
    Fixes #185640.

  15 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    adsl module now finds the correct exe, #185276 thanks to Marcello Laganà.

  14 Jul 2007; Mike Frysinger <vapier@gentoo.org>:

    Add --remove-destination to example /dev recover command #40987.